[gd_scene load_steps=6 format=3 uid="uid://cxjpb3qs5smjr"]

[ext_resource type="Script" path="res://GameObjects/GlobalScripts/SceneController.gd" id="1_wvcf5"]
[ext_resource type="AudioStream" uid="uid://den3lulkuytu5" path="res://music/Mr. Rich Brother.wav" id="2_dcwlt"]
[ext_resource type="PackedScene" uid="uid://dv48icwi157rm" path="res://Scenes/MainMenu.tscn" id="3_4gltq"]

[sub_resource type="Animation" id="Animation_mft5u"]
resource_name = "TransitionScreen"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/SceneTransition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(5, 0.5),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/SceneTransition:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ln4fv"]
_data = {
"TransitionScreen": SubResource("Animation_mft5u")
}

[node name="SceneController" type="Node2D"]
script = ExtResource("1_wvcf5")

[node name="MainAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_dcwlt")
volume_db = -80.0
mix_target = 1

[node name="SceneHolder" type="Node" parent="."]

[node name="MainMenu" parent="SceneHolder" instance=ExtResource("3_4gltq")]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="SceneTransition" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ln4fv")
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
